# internal/http/api.go
@@ -69,6 +69,17 @@ func NewGin(h *handlers.Handlers) *gin.Engine {
 		order.GET("/by-product/:id", h.GetOrderByProductID)
 	}
 
+	notifications := router.Group("/v1/notification")
+	{
+		notifications.POST("/create", h.CreateNotification)
+		notifications.GET("/:id", h.GetNotification)
+		notifications.PUT("/update/:id", h.UpdateNotification)
+		notifications.DELETE("/delete/:id", h.DeleteNotification)
+		notifications.GET("/list", h.ListNotifications)
+		notifications.POST("/notify-all", h.NotifyAll)
+	}
+
+
 	payment := router.Group("/v1/payment").Use(m.JWTMiddleware())
 	{
 		payment.POST("/create", h.CreatePayment)
